# fishr

./: Cargo.toml  LICENSE.md  README.md  examples.md  fish.py  json_compare.py
examples/: batman.fish  bottles.fish  brainfck.fish  dice.fish  factorial.fish  factorial2.fish  fibonacci.fish  fizzbuzz.fish  hello.fish  obfuscated-hello.fish  pi.fish  print_stack.fish  quine.fish  square_root.fish
src/: fish.rs  main.rs  stack.rs  val.rs
tests/: interpreter_test.rs  math_test.rs
